--- a/src/ui/product/stylesheet.styl
+++ b/src/ui/product/stylesheet.styl
@@ -15,7 +15,7 @@
 @font-face
 	font-family 'Albert Sans'
 	font-style italic
-	font-weight 400
+	font-weight 700
 	src url('./font_albertsans_700_i.woff2')
 
 // Single-direction margin
@@ -52,14 +52,11 @@ body
 	color var(--color)
 	font 11pt/1.5 'Albert Sans', 'Microsoft Sans Serif', 'Yu Gothic'
 	margin 0
-	padding-left calc(50% - 240px)
-	padding-right 8px
-	scrollbar-gutter stable
 
 // Paragraphs
 p
 	margin 0.5em 0 0 0
-	width 600px
+	width 480px
 hr
 	background currentColor
 	border 0
@@ -90,6 +87,7 @@ code
 pre
 	background var(--tintcolor)
 	font-family 'roboto mono'
+	overflow-wrap anywhere
 	white-space pre-wrap
 pre
 	display inline-block
