--- a/src/ui/product/post/SelftextMarkup.pug
+++ b/src/ui/product/post/SelftextMarkup.pug
@@ -1,5 +1,5 @@
 script.
-	import Markup from '../generic/Markup.pug'
+	import Markup from '../text/Markup.pug'
 	export html = null
 	# Display pictures instead of links where New Reddit does so.
 	formatted = html.replace(/<a href="https:\/\/preview.redd.it\/(?<filepath>[^"]+)">(?<linktext>[^<]*)<\/a>/g, '<img alt="$<linktext>" class="post-selftext-media" src="https://preview.redd.it/$<filepath>" title="$<linktext>">')
