internals: eliminate env code; reorg lib code into extractable module

--- a/src/ui/infra/VitalsMonitor.pug
+++ b/src/ui/infra/VitalsMonitor.pug
@@ -1,5 +1,5 @@
 script.
-	import Time from '../../lib/Time.coffee'
+	import { Time } from '../../utils/index.js'
 	import api from '../../api/index.js'
 	online = true
 	ratelimitMax = 60
