--- a/src/ui/product/post/Flair.pug
+++ b/src/ui/product/post/Flair.pug
@@ -1,5 +1,5 @@
 script.
-	import Color from '../../../lib/Color.coffee'
+	import { Color } from '../../../utils/index.js'
 	export color = null
 	export richtext = null
 	export text = null
