--- a/src/ui/product/post/Score.pug
+++ b/src/ui/product/post/Score.pug
@@ -1,5 +1,5 @@
 script.
-	import Format from '../../../lib/Format.coffee'
+	import { Format } from '../../../utils/index.js'
 	export value = null
 
 button.score
