--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -1,5 +1,5 @@
 script.
-	import Format from '../../../lib/Format.coffee'
+	import { Format } from '../../../utils/index.js'
 	import Avatar from '../user/Avatar.pug'
 	import AVPlayer from './AVPlayer.pug'
 	import Button from '../controls/Button.pug'
