--- a/src/ui/product/subreddit/Wiki.pug
+++ b/src/ui/product/subreddit/Wiki.pug
@@ -1,7 +1,7 @@
 script.
 	import Markup from '../text/Markup.pug'
 	import PageUnavailable from '../../infra/PageUnavailable.pug'
-	import Format from '../../../lib/Format.coffee'
+	import { Format } from '../../../utils/index.js'
 	import api from '../../../api/index.js'
 	export page_name = null
 	export revision_id = null
