--- a/src/ui/product/user/Avatar.pug
+++ b/src/ui/product/user/Avatar.pug
@@ -1,6 +1,6 @@
 script.
 	import api from '../../../api/index.js'
-	import Format from '../../../lib/Format.coffee'
+	import { Format } from '../../../utils/index.js'
 	export autoload = false
 	export username = null
 	deleted = username is '[deleted]'
