--- a/src/ui/product/subreddit/Rules.pug
+++ b/src/ui/product/subreddit/Rules.pug
@@ -3,7 +3,7 @@ script.
 	import api from '../../../api/index.js'
 	export subreddit_name = null
 	rules = null
-	api.watch(api.format.datasetId('subreddit_rules', subreddit_name), (x) -> { data: rules } = x)
+	api.watch(api.ID.dataset('subreddit_rules', subreddit_name), (x) -> { data: rules } = x)
 
 {#if rules}
 	ol.subreddit-rules
