--- a/src/ui/product/post/Post.pug
+++ b/src/ui/product/post/Post.pug
@@ -9,16 +9,18 @@ script.
 	import SelftextMarkup from './SelftextMarkup.pug'
 	import api from '../../../api/index.js'
 	export id = null
-	export setPageTitle = true
+	export multireddit = false
+	export standalone = false
 	post = null
 	api.watch(id, (x) ->
 		{ data: post } = x
 		if post?.user_tranches then for tranch in post.user_tranches then api.load(tranch)
 	)
+	expanded = standalone
 	galleryIndex = 0
 
 svelte:head
-	{#if setPageTitle}
+	{#if standalone}
 		{#if post}
 			title post: {post.title}
 		{:else}
@@ -26,92 +28,91 @@ svelte:head
 {#if post}
 	article.post
 		header.post-header
-			.post-meta
-				.post-score
-					Score(value={post.hide_score || post.score})
-				.post-flair
-					{#if post.link_flair_text}
-						Flair(color={post.link_flair_background_color} richtext={post.link_flair_richtext} text={post.link_flair_text})
-			.post-header-layout-core
+			button.post-card(on:mousedown={() => expanded = !expanded})
+				.post-meta
+					.post-flair
+						{#if post.link_flair_text}
+							Flair(color={post.link_flair_background_color} richtext={post.link_flair_richtext} text={post.link_flair_text})
 				h1.post-title {post.title}
 				.post-info
-					Avatar(autoload={false} username={post.author})
-					span.post-create-date Posted {Format.time.sRelative(post.created_utc)}
-					{#if post.edited}
-						span.post-edit-date(title="Last edited {Format.time.sRelative(post.edited)}") *
-		section.post-content
-			{#if post.format === 'self'}
-				{#if !post.selftext.length}
-					.post-selftext-empty
-			{:else if post.format === 'prediction'}
-				.post-predictions
-					{#each post.tournament_data.predictions as prediction}
-						h2.post-prediction-title {prediction.title}
-						dl.post-prediction-options
-							{#each prediction.options as option}
-								li
-									dt
-										meter(max={prediction.total_stake_amount} min={0} value={option.total_amount})
-									dd {option.text}
-			{:else if post.format === 'media'}
-				{#if post.media.length > 1}
-					menu.post-additional-images
-						Button(action={() => galleryIndex = Math.max(0, galleryIndex - 1)} key='t' text='←')
-						{#each post.media as media, index}
-							Button(action={() => galleryIndex = index})
-								picture
-									source(srcset={media.image_url_108})
-									img.post-additional-image-thumbnail(alt='thumbnail for image {index + 1} in gallery' class:post-additional-image-thumbnail-selected={galleryIndex === index} src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; height: {media.aspect_ratio < 1 ? '36px' : 'auto'}; width: {media.aspect_ratio < 1 ? 'auto' : '36px'}")
-						Button(action={() => galleryIndex = Math.min(post.media.length - 1, galleryIndex + 1)} key='g' text='→')
-				{@const media = post.media[galleryIndex]}
-					{#key media}
-						figure
-							{#if media.video_url}
-								AVPlayer(audio_url={media.video_audio_url} mimic_gif={media.is_gif} video_url={media.video_url})
-							{:else if media.image_url}
-								a(href={media.image_url} rel='external noopener preconnect' target='_blank')
+					time(datetime={post.created_utc} title={post.edited ? Format.time.sAbsolute(post.created_utc) + ' (last edited ' + Format.time.sAbsolute(post.edited) + ')': Format.time.sAbsolute(post.created_utc)}) {Format.time.sRelative(post.created_utc)}{post.edited ? ' *' : ''}
+					data.post-comment-count {post.num_comments} 💬
+				{#if multireddit}
+					.post-subreddit in
+						a(href='/r/{post.subreddit}') {post.subreddit}
+		{#if expanded || standalone}
+			section.post-content
+				{#if post.format === 'self'}
+					{#if !post.selftext.length}
+						.post-selftext-empty
+				{:else if post.format === 'prediction'}
+					.post-predictions
+						{#each post.tournament_data.predictions as prediction}
+							h2.post-prediction-title {prediction.title}
+							dl.post-prediction-options
+								{#each prediction.options as option}
+									li
+										dt
+											meter(max={prediction.total_stake_amount} min={0} value={option.total_amount})
+										dd {option.text}
+				{:else if post.format === 'media'}
+					{#if post.media.length > 1}
+						menu.post-additional-images
+							Button(action={() => galleryIndex = Math.max(0, galleryIndex - 1)} key='t' text='←')
+							{#each post.media as media, index}
+								Button(action={() => galleryIndex = index})
 									picture
-										source(srcset={media.image_url_640})
-										img.post-image(alt='image {galleryIndex + 1} of {post.media.length} in gallery' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}")
-								{#if media.caption_text || media.caption_url}
-									figcaption.post-image-caption
-										{#if media.caption_text}
-											p {media.caption_text}
-										{#if media.caption_url}
-											a(href={media.caption_url}) {media.caption_url}
-								menu.post-image-actions
-									Button(action={() => window.open(media.image_url)} key='e' text='Enlarge')
-									Button(action={() => window.open(media.image_url)} key='o' text='Open original')
-			{:else if post.format === 'embed'}
-				{#each post.media as media}
-					{#if media.iframe_url}
-						<!-- svelte wants iframe "title" attribute, which interferes with fullscreen playback (tooltip obscuring screen) and anyway provides no additional info here beyond what's in the URL -->
-						<!-- svelte-ignore a11y-missing-attribute -->
-						iframe.post-iframe(allow={media.iframe_allow} allowfullscreen='true' src={media.iframe_url})
-						menu.post-iframe-actions
-							Button(action={() => window.open(post.url)} key='o' text='Open original')
-					{:else if media.html}
-						{@html media.html}
-			{:else if post.format === 'link'}
-				a(href={post.url} rel='external noopener preconnect') {post.url}
-				menu.post-link-actions
-					Button(action={() => window.open(post.url)} key='e' text='Open link')
-			{:else}
-				p [Error displaying post.]
-			{#if post.selftext_html}
-				.post-selftext
-					SelftextMarkup(html={post.selftext_html})
-		{#if post.replies?.length}
-			ol.post-replies
-				{#each post.replies as replyId}
-					Comment(id={replyId} topLevel={true})
-				{#if post.more_replies}
-					.post-more-replies
-						Button(appearance='text' text="+ {post.more_replies.length} more {post.more_replies.length === 1 ? 'reply' : 'replies'}...")
+										source(srcset={media.image_url_108})
+										img.post-additional-image-thumbnail(alt='thumbnail for image {index + 1} in gallery' class:post-additional-image-thumbnail-selected={galleryIndex === index} src={media.image_url} style="aspect-ratio: {media.aspect_ratio}; height: {media.aspect_ratio < 1 ? '36px' : 'auto'}; width: {media.aspect_ratio < 1 ? 'auto' : '36px'}")
+							Button(action={() => galleryIndex = Math.min(post.media.length - 1, galleryIndex + 1)} key='g' text='→')
+					{@const media = post.media[galleryIndex]}
+						{#key media}
+							figure
+								{#if media.video_url}
+									AVPlayer(audio_url={media.video_audio_url} mimic_gif={media.is_gif} video_url={media.video_url})
+								{:else if media.image_url}
+									a(href={media.image_url} rel='external noopener preconnect' target='_blank')
+										picture
+											source(srcset={media.image_url_640})
+											img.post-image(alt='image {galleryIndex + 1} of {post.media.length} in gallery' src={media.image_url} style="aspect-ratio: {media.aspect_ratio}")
+									{#if media.caption_text || media.caption_url}
+										figcaption.post-image-caption
+											{#if media.caption_text}
+												p {media.caption_text}
+											{#if media.caption_url}
+												a(href={media.caption_url}) {media.caption_url}
+									menu.post-image-actions
+										Button(action={() => window.open(media.image_url)} key='e' text='Enlarge')
+										Button(action={() => window.open(media.image_url)} key='o' text='Open original')
+				{:else if post.format === 'embed'}
+					{#each post.media as media}
+						{#if media.iframe_url}
+							<!-- svelte wants iframe "title" attribute, which interferes with fullscreen playback (tooltip obscuring screen) and anyway provides no additional info here beyond what's in the URL -->
+							<!-- svelte-ignore a11y-missing-attribute -->
+							iframe.post-iframe(allow={media.iframe_allow} allowfullscreen='true' src={media.iframe_url})
+							menu.post-iframe-actions
+								Button(action={() => window.open(post.url)} key='o' text='Open original')
+						{:else if media.html}
+							{@html media.html}
+				{:else if post.format === 'link'}
+					a(href={post.url} rel='external noopener preconnect') {post.url}
+					menu.post-link-actions
+						Button(action={() => window.open(post.url)} key='e' text='Open link')
+				{:else}
+					p [Error displaying post.]
+				{#if post.selftext_html}
+					.post-selftext
+						SelftextMarkup(html={post.selftext_html})
+			{#if post.replies?.length}
+				ol.post-replies
+					{#each post.replies as replyId}
+						Comment(id={replyId} topLevel={true})
+					{#if post.more_replies}
+						.post-more-replies
+							Button(appearance='text' text="+ {post.more_replies.length} more {post.more_replies.length === 1 ? 'reply' : 'replies'}...")
 
 style.
 	.post
-		padding 2em 0
 		width 480px
 	.post-additional-images
 		align-items flex-end
@@ -121,6 +122,13 @@ style.
 		width 54px
 	.post-additional-image-thumbnail-selected
 		border-color currentColor
+	.post-card
+		background var(--commentcolor)
+		border-radius 1em
+		text-align left
+		padding 1em
+		position relative
+		width 100%
 	.post-content
 		margin-top 2em
 		position relative
@@ -148,10 +156,23 @@ style.
 	.post-image-caption
 		font-size 12px
 		padding 7px
+	.post-info
+		align-items center
+		display flex
+		font bold 12px 'roboto mono'
+		gap 1ch
+		justify-content space-between
+		opacity 0.75
 	.post-link-actions
 		display flex
 		gap 1em
 		margin-top 1em
+	.post-meta
+		display flex
+		justify-content space-between
+		position absolute
+		top -1em
+		width calc(100% - 2em)
 	.post-more-replies
 		margin-top 2em
 	:global(.post-replies > .comment)
@@ -161,6 +182,12 @@ style.
 	:global(.post-selftext-media)
 		max-width 100%
 		padding 1em 0
+	.post-subreddit
+		margin-top 0.5em
+		position absolute
+		right 1em
 	.post-title
-		font-size 2.5em
-		line-height 1.25
+		color var(--linkcolor)
+		font-size 1.33em
+		margin 0
+		overflow-wrap anywhere
